; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/pkcs12/extr_p12_decr.c_PKCS12_item_decrypt_d2i.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/pkcs12/extr_p12_decr.c_PKCS12_item_decrypt_d2i.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@PKCS12_F_PKCS12_ITEM_DECRYPT_D2I = common dso_local global i32 0, align 4
@PKCS12_R_PKCS12_PBE_CRYPT_ERROR = common dso_local global i32 0, align 4
@PKCS12_R_DECODE_ERROR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @PKCS12_item_decrypt_d2i(i32* %0, i32* %1, i8* %2, i32 %3, %struct.TYPE_3__* %4, i32 %5) #0 {
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca %struct.TYPE_3__*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i8*, align 8
  %15 = alloca i8*, align 8
  %16 = alloca i8*, align 8
  %17 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i32* %1, i32** %9, align 8
  store i8* %2, i8** %10, align 8
  store i32 %3, i32* %11, align 4
  store %struct.TYPE_3__* %4, %struct.TYPE_3__** %12, align 8
  store i32 %5, i32* %13, align 4
  %18 = load i32*, i32** %8, align 8
  %19 = load i8*, i8** %10, align 8
  %20 = load i32, i32* %11, align 4
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %12, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %12, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @PKCS12_pbe_crypt(i32* %18, i8* %19, i32 %20, i32 %23, i32 %26, i8** %14, i32* %17, i32 0)
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %33, label %29

29:                                               ; preds = %6
  %30 = load i32, i32* @PKCS12_F_PKCS12_ITEM_DECRYPT_D2I, align 4
  %31 = load i32, i32* @PKCS12_R_PKCS12_PBE_CRYPT_ERROR, align 4
  %32 = call i32 @PKCS12err(i32 %30, i32 %31)
  store i8* null, i8** %7, align 8
  br label %55

33:                                               ; preds = %6
  %34 = load i8*, i8** %14, align 8
  store i8* %34, i8** %15, align 8
  %35 = load i32, i32* %17, align 4
  %36 = load i32*, i32** %9, align 8
  %37 = call i8* @ASN1_item_d2i(i32* null, i8** %15, i32 %35, i32* %36)
  store i8* %37, i8** %16, align 8
  %38 = load i32, i32* %13, align 4
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %40, label %44

40:                                               ; preds = %33
  %41 = load i8*, i8** %14, align 8
  %42 = load i32, i32* %17, align 4
  %43 = call i32 @OPENSSL_cleanse(i8* %41, i32 %42)
  br label %44

44:                                               ; preds = %40, %33
  %45 = load i8*, i8** %16, align 8
  %46 = icmp ne i8* %45, null
  br i1 %46, label %51, label %47

47:                                               ; preds = %44
  %48 = load i32, i32* @PKCS12_F_PKCS12_ITEM_DECRYPT_D2I, align 4
  %49 = load i32, i32* @PKCS12_R_DECODE_ERROR, align 4
  %50 = call i32 @PKCS12err(i32 %48, i32 %49)
  br label %51

51:                                               ; preds = %47, %44
  %52 = load i8*, i8** %14, align 8
  %53 = call i32 @OPENSSL_free(i8* %52)
  %54 = load i8*, i8** %16, align 8
  store i8* %54, i8** %7, align 8
  br label %55

55:                                               ; preds = %51, %29
  %56 = load i8*, i8** %7, align 8
  ret i8* %56
}

declare dso_local i32 @PKCS12_pbe_crypt(i32*, i8*, i32, i32, i32, i8**, i32*, i32) #1

declare dso_local i32 @PKCS12err(i32, i32) #1

declare dso_local i8* @ASN1_item_d2i(i32*, i8**, i32, i32*) #1

declare dso_local i32 @OPENSSL_cleanse(i8*, i32) #1

declare dso_local i32 @OPENSSL_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
